Added front end handlers for signup flow.
